Replace deprecated logo with logo_url in sphinx template
It was our template all along and not rtd-theme

--- a/setup.cfg
+++ b/setup.cfg
@@ -51,7 +51,7 @@ build_requires =
 
 [options.extras_require]
 build_sphinx =
-	Sphinx < 6
+	Sphinx
 	myst-parser
 	sphinxcontrib-napoleon
 	sphinx-rtd-theme
