Build from our own tarball to guarantee sha256sum stability
Instead of building from pypi - reduces dependency on pypi step.

--- a/.github/workflows/draft_release.yml
+++ b/.github/workflows/draft_release.yml
@@ -72,6 +72,7 @@ jobs:
       with:
         draft: true
         tag_name: v${{ steps.name.outputs.tag }}
+        files: pympress-${{ steps.name.outputs.tag }}.tar.gz
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_PERSONAL_ACCESS_TOKEN }}
 
