--- a/setup.cfg
+++ b/setup.cfg
@@ -44,7 +44,7 @@ packages =
 python_requires = >=3.4
 install_requires =
 	watchdog
-	importlib_resources;python_version<"3.7"
+	importlib_resources >= 1.3;python_version<"3.9"
 build_requires =
 	setuptools
 	babel
