Support configurable eraser width
Still not color of course

--- a/pympress/share/defaults.conf
+++ b/pympress/share/defaults.conf
@@ -146,6 +146,7 @@ vertical = bottom
 maxpages = 200
 
 [highlight]
+width_eraser = 90
 color_1 = rgba(255,255,0,0.5)
 width_1 = 90
 color_2 = rgba(128,255,0,0.5)
