Add compact mode setting and shortcut

--- a/pympress/share/defaults.conf
+++ b/pympress/share/defaults.conf
@@ -13,6 +13,7 @@ pointer = red
 pointer_mode = manual
 show_bigbuttons = off
 show_annotations = off
+compact_mode = off
 scroll_number = off
 slide_ratio = 0.75
 next_slide_count = 1
@@ -196,6 +197,7 @@ presenter-fullscreen = <ctrl>f
 zoom = z
 unzoom = u
 notes-mode = n
+compact-mode = c
 annotations = a
 highlight = h
 deck-overview = d
