--- a/.github/workflows/deploy_doc_l10n.yml
+++ b/.github/workflows/deploy_doc_l10n.yml
@@ -47,7 +47,7 @@ jobs:
         poeditor_api_token: ${{ secrets.POEDITOR_API_TOKEN }}
       run: |
         ./scripts/poedit.sh contributors
-        python3 -m sphinx -bhtml docs/ build/sphinx/html
+        python3 -m sphinx -bhtml docs/ build/sphinx/html -t api_doc -t install_instructions
         tar czf pympress-docs.tar.gz -C build/sphinx/html/ .
     - name: Upload
       uses: actions/upload-artifact@v3
