--- a/setup.cfg
+++ b/setup.cfg
@@ -86,7 +86,7 @@ indent_width = 4
 [flake8]
 docstring-convention = google
 max-line-length = 120
-builtins = _, unicode
+builtins = _, unicode, tags
 exclude =
 	.git
 	.eggs
