Split into show menu + compact mode and rework menu bar
Also ensure we properly remember the mode set from previous run.

--- a/pympress/share/defaults.conf
+++ b/pympress/share/defaults.conf
@@ -16,6 +16,8 @@ show_annotations = off
 scroll_number = off
 slide_ratio = 0.75
 next_slide_count = 1
+hide_menu = off
+compact_mode = off
 
 [deck-overview]
 max-slides-per-row = 6
@@ -197,6 +199,7 @@ zoom = z
 unzoom = u
 notes-mode = n
 compact-mode = c
+hide-menu = <ctrl>m
 annotations = a
 highlight = h
 deck-overview = d
