--- a/pympress/share/applications/io.github.pympress.desktop
+++ b/pympress/share/applications/io.github.pympress.desktop
@@ -3,7 +3,7 @@ Categories=Office;Viewer;Presentation;GTK;
 Keywords=Presentation;Dual-Screen;Beamer;
 Comment=A simple yet powerful PDF reader designed for dual-screen presentations
 Exec=pympress %f
-Icon=pympress
+Icon=io.github.pympress
 MimeType=application/pdf;
 Name=pympress
 Terminal=false
