Modernize cfg for changing setuptools requirements

--- a/setup.cfg
+++ b/setup.cfg
@@ -22,7 +22,6 @@ classifiers =
 	Intended Audience :: End Users/Desktop
 	Intended Audience :: Information Technology
 	Intended Audience :: Science/Research
-	License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
 	Natural Language :: English
 	Natural Language :: French
 	Natural Language :: German
@@ -111,13 +110,13 @@ no_location = true
 no_wrap = true
 sort_output = true
 omit_header = true
-output-file = pympress/share/locale/pympress.pot
+output_file = pympress/share/locale/pympress.pot
 mapping_file = pympress/share/locale/babel_mapping.cfg
 
 [compile_catalog]
 domain = pympress
 directory = pympress/share/locale/
-use-fuzzy = false
+use_fuzzy = false
 statistics = true
 
 [pysrpm]
