Flake8 accepts both dash and underscore per docs but be consistent

--- a/setup.cfg
+++ b/setup.cfg
@@ -84,8 +84,8 @@ use_tabs = off
 indent_width = 4
 
 [flake8]
-docstring-convention = google
-max-line-length = 120
+docstring_convention = google
+max_line_length = 120
 builtins = _, unicode, tags
 exclude =
 	.git
@@ -100,7 +100,7 @@ ignore =
 	# allow sometimes, e.g. aligning code etc.
 	D205, D212, D415, E201, E221, E241, E266, E301, E402, E701, E731
 
-per-file-ignores =
+per_file_ignores =
 	# do not complain about dummy functions
 	pympress/media_overlays/gif_backend.py: D102, E704
 	pympress/__main__.py: F401
