--- a/setup.cfg
+++ b/setup.cfg
@@ -104,6 +104,7 @@ per_file_ignores =
 	# do not complain about dummy functions
 	pympress/media_overlays/gif_backend.py: D102, E704
 	pympress/__main__.py: F401
+	docs/conf.py: F401
 
 [extract_messages]
 no_location = true
