--- a/.github/workflows/publish_release.yml
+++ b/.github/workflows/publish_release.yml
@@ -126,14 +126,16 @@ jobs:
       - name: Push the changes
         if: ${{ steps.info.outputs.prev_pkgver }} != ${{ steps.info.outputs.tag }}
         run: |
-          trap 'rm -f ./ssh-key' EXIT && echo "$AUR_PRIVATE_KEY" > ./ssh-key && chmod 0600 ./ssh-key
-          ssh='ssh -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no -i ../ssh-key'
+          cd aur-repo
+          git config user.name Cimbali
+          git config user.email me@cimba.li
+          echo -e "protocol=https\nhost=github.com\nusername=Cimbali\npassword=$PASSWORD" | git credential-store store
 
-          git -C aur-repo -c user.name=Cimbali -c user.email="me@cimba.li" commit -am "Update to v${{ steps.info.outputs.tag }}"
-          git -C aur-repo -c core.sshCommand="$ssh" push git@github.com:Cimbali/pympress-pkgbuild.git "master:master"
+          git commit -am "Update to v${{ steps.info.outputs.tag }}"
+          git push origin "main:main"
 
         env:
-          AUR_PRIVATE_KEY: ${{ secrets.AUR_PRIVATE_KEY }}
+          AUR_PRIVATE_KEY: ${{ secrets.PYMPRESS_ACTION_PAT }}
 
 
   copr:
@@ -164,7 +166,7 @@ jobs:
         bash
       env:
         tag: ${{ steps.info.outputs.tag }}
-        GITHUB_TOKEN: ${{ secrets.GITHUB_PERSONAL_ACCESS_TOKEN }}
+        GITHUB_TOKEN: ${{ secrets.PYMPRESS_ACTION_PAT }}
       run: |
         curl -s -u "Cimbali:$GITHUB_TOKEN" -H "X-GitHub-Api-Version: 2022-11-28" -H "Accept: application/vnd.github+json" \
           "https://api.github.com/repos/Cimbali/pympress/releases" -o - |
@@ -240,7 +242,7 @@ jobs:
         git checkout master
         git push gh -f master:master
       env:
-        PASSWORD: ${{ secrets.GITHUB_HOMEBREW_TOKEN }}
+        PASSWORD: ${{ secrets.PYMPRESS_ACTION_PAT }}
 
     - name: Make a brew PR from pypi’s metadata
       if: ${{ needs.pypi.outputs.release == 'final' }}
