--- a/.github/workflows/deploy_doc_l10n.yml
+++ b/.github/workflows/deploy_doc_l10n.yml
@@ -63,7 +63,7 @@ jobs:
     - uses: actions/checkout@v4
       with:
         repository: pympress/pympress.github.io
-        token: ${{ secrets.GITHUB_PERSONAL_ACCESS_TOKEN }}
+        token: ${{ secrets.PYMPRESSDOCS_ACTION_PAT }}
         ref: main
     - name: Download
       uses: actions/download-artifact@v4
